--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,148 @@
-template-repository (1.0-1) unstable; urgency=medium
+golang-github-masterminds-semver-dev (3.2.0-1) unstable; urgency=medium
 
-  * Initial release
+  * New upstream release.
+  * Bump Standards-Version to 4.6.2.
+  * Update d/watch for GitHub.
 
- -- Tsic404 <liuheng@deepin.org>  Sat, 28 Jan 2023 13:46:49 +0800
+ -- ChangZhuo Chen (陳昌倬) <czchen@debian.org>  Thu, 12 Jan 2023 16:31:22 +0800
+
+golang-github-masterminds-semver-dev (3.1.1-1) unstable; urgency=medium
+
+  * Team Upload
+
+  [ Debian Janitor ]
+  * Update watch file format version to 4.
+  * Bump debhelper from old 12 to 13.
+  * Set upstream metadata fields: Bug-Database, Bug-Submit, Repository,
+    Repository-Browse.
+  * Update standards version to 4.5.1, no changes needed.
+
+  [ Shengjing Zhu ]
+  * Upload to sid
+  * Update Standards-Version to 4.6.0 (no changes)
+  * Update Section to golang
+  * Add Rules-Requires-Root
+
+ -- Shengjing Zhu <zhsj@debian.org>  Fri, 12 Nov 2021 01:35:52 +0800
+
+golang-github-masterminds-semver-dev (3.1.1-1~exp0) experimental; urgency=medium
+
+  * Team Upload.
+
+  [ Debian Janitor ]
+  * Apply multi-arch hints. Add Multi-Arch: foreign.
+
+  [ Peymaneh Nejad ]
+  * New upstream version 3.1.1
+
+ -- Peymaneh Nejad <p.nejad@posteo.de>  Mon, 07 Jun 2021 17:39:15 +0200
+
+golang-github-masterminds-semver-dev (1.4.2-2) unstable; urgency=medium
+
+  * Apply "cme fix dpkg" fixes:
+    - Update debhelper dependency to "Build-Depends: debhelper-compat (= 12)"
+    - Bump Standards-Version to 4.4.0 (no change)
+  * Build-Depends on golang-any instead of golang-go
+  * Add myself to the list of Uploaders
+  * Update Maintainer email address to team+pkg-go@tracker.debian.org
+
+ -- Anthony Fok <foka@debian.org>  Sat, 03 Aug 2019 06:33:41 -0600
+
+golang-github-masterminds-semver-dev (1.4.2-1) unstable; urgency=medium
+
+  * New upstream release.
+  * Use https in Format field in d/copyright.
+
+ -- ChangZhuo Chen (陳昌倬) <czchen@debian.org>  Sun, 29 Apr 2018 19:56:02 +0800
+
+golang-github-masterminds-semver-dev (1.4.1-1) unstable; urgency=medium
+
+  [ Alexandre Viau ]
+  * Point Vcs-* urls to salsa.debian.org.
+
+  [ ChangZhuo Chen (陳昌倬) ]
+  * New upstream release.
+  * Bump Standards-Version to 4.1.4.
+  * Bump compat to 11.
+
+ -- ChangZhuo Chen (陳昌倬) <czchen@debian.org>  Mon, 09 Apr 2018 11:40:27 +0800
+
+golang-github-masterminds-semver-dev (1.4.0-2) unstable; urgency=medium
+
+  * Team upload.
+  * d/control: fix XS-Go-Import-Path
+
+ -- Michael Stapelberg <stapelberg@debian.org>  Sat, 10 Feb 2018 17:55:19 +0100
+
+golang-github-masterminds-semver-dev (1.4.0-1) unstable; urgency=medium
+
+  * New upstream release.
+  * Bump Standards-Version to 4.1.1.
+    * Change Priority to optional.
+
+ -- ChangZhuo Chen (陳昌倬) <czchen@debian.org>  Tue, 17 Oct 2017 15:40:18 +0800
+
+golang-github-masterminds-semver-dev (1.3.1-1) unstable; urgency=medium
+
+  * New upstream version.
+
+ -- ChangZhuo Chen (陳昌倬) <czchen@debian.org>  Sat, 22 Jul 2017 10:28:30 +0800
+
+golang-github-masterminds-semver-dev (1.3.0-1) unstable; urgency=medium
+
+  * Merge to unstable.
+  * Bump Standards-Version to 4.0.0.
+  * Bump compat to 10.
+
+ -- ChangZhuo Chen (陳昌倬) <czchen@debian.org>  Wed, 21 Jun 2017 15:20:15 +0800
+
+golang-github-masterminds-semver-dev (1.3.0-1~exp1) experimental; urgency=medium
+
+  * New upstream version.
+
+ -- ChangZhuo Chen (陳昌倬) <czchen@debian.org>  Sun, 07 May 2017 07:55:25 +0800
+
+golang-github-masterminds-semver-dev (1.2.3-1~exp1) experimental; urgency=medium
+
+  * New upstream version.
+
+ -- ChangZhuo Chen (陳昌倬) <czchen@debian.org>  Sat, 08 Apr 2017 11:42:59 +0800
+
+golang-github-masterminds-semver-dev (1.2.2-1) unstable; urgency=medium
+
+  * New upstream version.
+
+ -- ChangZhuo Chen (陳昌倬) <czchen@debian.org>  Thu, 22 Dec 2016 23:08:23 +0800
+
+golang-github-masterminds-semver-dev (1.2.1-1) unstable; urgency=medium
+
+  * New upstream version.
+
+ -- ChangZhuo Chen (陳昌倬) <czchen@debian.org>  Fri, 02 Dec 2016 12:02:48 +0800
+
+golang-github-masterminds-semver-dev (1.2.0-1) unstable; urgency=medium
+
+  * New upstream version.
+
+ -- ChangZhuo Chen (陳昌倬) <czchen@debian.org>  Fri, 11 Nov 2016 18:47:49 +0800
+
+golang-github-masterminds-semver-dev (1.1.1-1) unstable; urgency=medium
+
+  * New upstream version.
+  * d/watch: handle "v" prefix in version.
+  * d/control: drop Built-Using and Multi-Arch fields.
+
+ -- Vincent Bernat <bernat@debian.org>  Thu, 14 Jul 2016 07:28:43 +0200
+
+golang-github-masterminds-semver-dev (1.1.0-2) unstable; urgency=medium
+
+  * Change maintainer to Debian Go Packaging Team.
+  * Remove unused README.Debian.
+
+ -- ChangZhuo Chen (陳昌倬) <czchen@debian.org>  Sun, 17 Apr 2016 13:36:33 +0800
+
+golang-github-masterminds-semver-dev (1.1.0-1) unstable; urgency=low
+
+  * Initial release. Closes: #821101
+
+ -- ChangZhuo Chen (陳昌倬) <czchen@debian.org>  Fri, 15 Apr 2016 22:49:21 +0800
